microshak.com/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshak-ingress
  namespace: microshak
spec:
  rules:
    - host: microshak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  microshak-service
                port:
                  number: 80
